# Portal/src/api/language.ts
@@ -1,13 +1,27 @@
 import instance from '../lib/axiosInstance'
-import { MassLanguageForm } from '../lib/validations/language'
+import { LanguageForm, UpdateLanguageForm } from '../lib/validations/language'
 import { LanguageResponse } from '../types/apiResponses'
 
-export async function addNewLanguage(languageObj: MassLanguageForm) {
+export async function addNewLanguage(languageObj: LanguageForm) {
   const response = await instance.post<{ message: string }>('/language', languageObj)
   return response.data
 }
 
 export async function getLanguages() {
-    const response = await instance.get<{ languages: LanguageResponse [], message: string, languageCount: number }>('/language/all')
+    const response = await instance.get<{ languages: LanguageResponse [], message: string, numberOfPages: number }>('/language/all')
+    return response.data
+  }
+
+
+  export async function updateLanguage(updateLocationObj: UpdateLanguageForm) {
+    const response = await instance.put<{ message: string }>(`/language/${updateLocationObj.languageId}`, {
+      language: updateLocationObj.language,
+      isActive: updateLocationObj.isActive
+    })
+    return response.data
+  }
+  
+  export async function deletLanguage(langaugeId: number) {
+    const response = await instance.delete<{ message: string }>(`/language/${langaugeId}`)
     return response.data
   }
